--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
   <link rel="preload" href="Assets/away.jpg" as="image">
   <link rel="preload" href="Assets/group.jpg" as="image">
   <link rel="preload" href="Assets/direct.jpg" as="image">
+  <link rel="preload" href="/Assets/away.jpg" as="image">
+  <link rel="preload" href="/Assets/group.jpg" as="image">
+  <link rel="preload" href="/Assets/direct.jpg" as="image">
+  <link rel="icon" href="/Assets/favicon.png" type="image/png">
+
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
@@ -271,6 +276,7 @@
 
 </body>
 </html>
+
 
 
 
