--- a/index.html
+++ b/index.html
@@ -76,16 +76,7 @@
 
     /* Hero section */
     .heroGallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:1rem;margin-top:1.5rem}
-    
-/* ensure images are block-level and have a fixed height for stable layout */
-.heroGallery img {
-  display: block;
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
-  border-radius: var(--radius);
-  background-color: #0b0b0b; /* helps avoid a flash of empty area */
-}
+    .heroGallery img{width:100%;height:250px;object-fit:cover;border-radius:var(--radius)}
     
 
     .heroName{text-align:center;margin-top:2rem}
@@ -276,6 +267,7 @@
 
 </body>
 </html>
+
 
 
 
