--- a/index.html
+++ b/index.html
@@ -76,8 +76,15 @@
 
     /* Hero section */
     .heroGallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:1rem;margin-top:1.5rem}
-    .heroGallery img{width:100%;height:250px;object-fit:cover;border-radius:var(--radius)}
-    
+/* ensure images are block-level and have a fixed height for stable layout */
+.heroGallery img {
+  display: block;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: var(--radius);
+  background-color: #0b0b0b; /* helps avoid a flash of empty area */
+}
 
     .heroName{text-align:center;margin-top:2rem}
     .heroName h1{font-family:'Bitter',serif;font-weight:700;font-size:3rem;margin-bottom:.25rem}
