--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
   <link rel="icon" href="Assets/favicon.png" type="image/png">
 
   <!-- Performance hints -->
+<link rel="preload" href="Assets/bookcover.jpg" as="image">
+<link rel="preload" href="Assets/away.jpg" as="image">
+<link rel="preload" href="Assets/group.jpg" as="image">
+<link rel="preload" href="Assets/direct.jpg" as="image">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
@@ -257,6 +261,7 @@
 
 </body>
 </html>
+
 
 
 
