--- a/books.html
+++ b/books.html
@@ -29,7 +29,9 @@
   <meta name="twitter:image" content="https://www.j-mk.com/Assets/bookcover.jpg">
 
   <!-- Performance hints -->
- 
+ <link rel="preload" href="/Assets/bookcover.jpg" as="image">
+ <link rel="icon" href="/Assets/favicon.png" type="image/png">
+
 
 
   <!-- Fonts -->
@@ -267,6 +269,7 @@
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 </body>
 </html>
+
 
 
 
