--- a/index.html
+++ b/index.html
@@ -7,119 +7,76 @@
   <title>Jose-Maria Kimburi</title>
   <meta name="description" content="Author & Filmmaker">
 
-  <!-- Added SEO & discovery metadata (keeps original content) -->
+  <!-- SEO metadata -->
   <meta name="author" content="Jose-Maria Kimburi">
   <meta name="robots" content="index, follow">
   <meta name="keywords" content="Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi, Kimburi J, J Kimburi, J-MK, 18 Reflections, 18 Reflections: Divides, Epidemics and the Generation Caught in Between, BioVerse TV">
-  <link rel="canonical" href="https://www.j-mk.com/">
-  <link rel="alternate" hreflang="en-GB" href="https://www.j-mk.com/">
+  <link rel="canonical" href="https://j-mk.com/">
+  <link rel="alternate" hreflang="en-GB" href="https://j-mk.com/">
 
-  <!-- Open Graph & Twitter card for richer sharing -->
+  <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Jose-Maria Kimburi">
   <meta property="og:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
-  <meta property="og:url" content="https://www.j-mk.com/">
-  <meta property="og:image" content="https://www.j-mk.com/Assets/away.jpg">
+  <meta property="og:url" content="https://j-mk.com/">
+  <meta property="og:image" content="https://j-mk.com/Assets/away.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Jose-Maria Kimburi">
   <meta name="twitter:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
-  <meta name="twitter:image" content="https://www.j-mk.com/Assets/away.jpg">
+  <meta name="twitter:image" content="https://j-mk.com/Assets/away.jpg">
 
   <!-- Favicon -->
-  <link rel="icon" href="Assets/favicon.png" type="image/png">
+  <link rel="icon" href="/Assets/favicon.png" type="image/png">
 
-  <!-- Performance hints -->
-<link rel="preload" href="Assets/away.jpg" as="image">
-<link rel="preload" href="Assets/group.jpg" as="image">
-<link rel="preload" href="Assets/direct.jpg" as="image">
+  <!-- Performance hints (use root-based paths) -->
+  <link rel="preload" href="/Assets/away.jpg" as="image">
+  <link rel="preload" href="/Assets/group.jpg" as="image">
+  <link rel="preload" href="/Assets/direct.jpg" as="image">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
 
-  <!-- Optional sitemap hint -->
+  <!-- Sitemap hint -->
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 
   <style>
-    :root{
-      --bg:#0f1115;
-      --muted:#9aa0a6;
-      --text:#e7e9ec;
-      --accent:#7bd389;
-      --card:rgba(255,255,255,0.02);
-      --radius:12px;
-      --maxWidth:1100px;
-      --font:'Inter', system-ui, -apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif;
-    }
-
-    *{box-sizing:border-box;margin:0;padding:0}
-    body{
-      font-family:var(--font);
-      background:linear-gradient(180deg,#07070a 0%,var(--bg) 100%);
-      color:var(--text);
-      line-height:1.45;
-      font-size:16px;
-    }
-    .container{max-width:var(--maxWidth);margin:0 auto;padding:1.25rem}
-
-    /* Header navigation */
-    header{padding:1rem 0}
-    nav ul{display:flex;gap:1rem;list-style:none;justify-content:center}
-    .navLink{color:var(--muted);text-decoration:none;padding:.4rem .6rem;border-radius:8px;font-weight:600}
-    .navLink:hover{background:rgba(255,255,255,0.03);color:#fff;text-decoration:none}
-
-    /* Hero section */
-    .heroGallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:1rem;margin-top:1.5rem}
-    .heroGallery img{width:100%;height:250px;object-fit:cover;border-radius:var(--radius)}
-
-    .heroName{text-align:center;margin-top:2rem}
-    .heroName h1{font-family:'Bitter',serif;font-weight:700;font-size:3rem;margin-bottom:.25rem}
-    .heroName p{font-family:'Mrs Saint Delafield',cursive;font-size:3rem;color:var(--accent);margin:0} /* increased by 0.5rem */
-
-    /* Bubble links */
-    .homeBubbles{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1rem;margin-top:2rem}
-    .bubbleCard{background:var(--card);border-radius:var(--radius);padding:1.25rem;text-align:center;transition:transform .2s, box-shadow .2s;cursor:pointer}
-    .bubbleCard:hover{transform:translateY(-5px);box-shadow:0 8px 20px rgba(0,0,0,0.25)}
-    .bubbleCard h3{margin-bottom:.5rem;font-size:1.35rem;color:var(--accent)}
-    .bubbleCard p{font-size:.95rem;color:var(--muted)}
-
-    /* Biography */
-    .biography{display:flex;justify-content:center;align-items:center;flex-direction:column;text-align:center;margin-top:3rem;gap:1rem}
-    .biographyText h2{font-family:'Zeyada',cursive;font-weight:normal;font-size:5.5rem;color:#fff;margin-bottom:1rem;text-align:center} /* increased by 1rem */
-    .biographyText p{margin-bottom:.75rem;color:#fff;font-size:1rem}
-
-    /* Updates */
-    .updates{margin-top:2rem;text-align:center}
-    .updatesText p{margin-bottom:1rem;color:#fff;font-size:1rem}
-    .updatesText a{color:var(--accent);text-decoration:underline}
-    .updatesText a:hover,.updatesText a:focus{color:#fff;text-decoration:none}
-
-    /* Footer */
-    footer{border-top:1px solid rgba(255,255,255,0.03);padding:1.25rem 0;margin-top:2.5rem;color:var(--muted);font-size:.95rem}
-    footer div{display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;margin-top:1.5rem}
-    footer a{color:var(--accent);text-decoration:underline}
-
-    /* Accessible visually hidden utility for aliases and seo text */
-    .sr-only {
-      position: absolute !important;
-      width: 1px !important;
-      height: 1px !important;
-      padding: 0 !important;
-      margin: -1px !important;
-      overflow: hidden !important;
-      clip: rect(0 0 0 0) !important;
-      white-space: nowrap !important;
-      border: 0 !important;
-    }
-
+    :root { --bg: #0f1115; --muted: #9aa0a6; --text: #e7e9ec; --accent: #7bd389; --card: rgba(255,255,255,0.02); --radius: 12px; --maxWidth: 1100px; --font: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body { font-family: var(--font); background: linear-gradient(180deg,#07070a 0%,var(--bg) 100%); color: var(--text); line-height: 1.45; font-size: 16px; }
+    .container { max-width: var(--maxWidth); margin: 0 auto; padding: 1.25rem; }
+    header { padding: 1rem 0; }
+    nav ul { display: flex; gap: 1rem; list-style: none; justify-content: center; }
+    .navLink { color: var(--muted); text-decoration: none; padding: .4rem .6rem; border-radius: 8px; font-weight: 600; }
+    .navLink:hover { background: rgba(255,255,255,0.03); color: #fff; }
+    .heroGallery { display: grid; grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); gap: 1rem; margin-top: 1.5rem; }
+    .heroGallery img { width: 100%; height: 250px; object-fit: cover; border-radius: var(--radius); }
+    .heroName { text-align: center; margin-top: 2rem; }
+    .heroName h1 { font-family: 'Bitter', serif; font-weight: 700; font-size: 3rem; margin-bottom: .25rem; }
+    .heroName p { font-family: 'Mrs Saint Delafield', cursive; font-size: 3rem; color: var(--accent); margin: 0; }
+    .homeBubbles { display: grid; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); gap: 1rem; margin-top: 2rem; }
+    .bubbleCard { background: var(--card); border-radius: var(--radius); padding: 1.25rem; text-align: center; transition: transform .2s, box-shadow .2s; cursor: pointer; }
+    .bubbleCard:hover { transform: translateY(-5px); box-shadow: 0 8px 20px rgba(0,0,0,0.25); }
+    .bubbleCard h3 { margin-bottom: .5rem; font-size: 1.35rem; color: var(--accent); }
+    .bubbleCard p { font-size: .95rem; color: var(--muted); }
+    .biography { display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center; margin-top: 3rem; gap: 1rem; }
+    .biographyText h2 { font-family: 'Zeyada', cursive; font-weight: normal; font-size: 5.5rem; color: #fff; margin-bottom: 1rem; text-align: center; }
+    .biographyText p { margin-bottom: .75rem; color: #fff; font-size: 1rem; }
+    .updates { margin-top: 2rem; text-align: center; }
+    .updatesText p { margin-bottom: 1rem; color: #fff; font-size: 1rem; }
+    .updatesText a { color: var(--accent); text-decoration: underline; }
+    .updatesText a:hover, .updatesText a:focus { color: #fff; text-decoration: none; }
+    footer { border-top: 1px solid rgba(255,255,255,0.03); padding: 1.25rem 0; margin-top: 2.5rem; color: var(--muted); font-size: .95rem; }
+    footer div { display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; margin-top: 1.5rem; }
+    footer a { color: var(--accent); text-decoration: underline; }
+    .sr-only { position: absolute !important; width: 1px !important; height: 1px !important; padding: 0 !important; margin: -1px !important; overflow: hidden !important; clip: rect(0 0 0 0) !important; white-space: nowrap !important; border: 0 !important; }
     @media(max-width:880px) {
-      .heroGallery img{height:180px}
-      .biographyText h2{font-size:4rem}
+      .heroGallery img { height: 180px; }
+      .biographyText h2 { font-size: 4rem; }
     }
   </style>
 </head>
 <body>
-
   <!-- Header -->
   <header class="siteHeader">
     <div class="container row">
@@ -135,29 +92,29 @@
   <!-- Main content -->
   <main class="container" itemscope itemtype="https://schema.org/Person" aria-label="Main content for Jose-Maria Kimburi">
 
-    <!-- Hero gallery -->
+    <!-- Hero gallery of images -->
     <section class="heroGallery" aria-label="Gallery of images">
-      <!-- responsive images with lazy loading and srcset -->
+      <!-- Responsive images with eager loading -->
       <img src="/Assets/away.jpg"
-     srcset="/Assets/away.jpg 1200w, /Assets/away-medium.jpg 800w, /Assets/away-small.jpg 480w"
-     sizes="(max-width:880px) 100vw, 33vw"
-     width="1200" height="250"
-     alt="Jose-Maria Kimburi at work"
-     loading="eager" decoding="async">
+           srcset="/Assets/away.jpg 1200w, /Assets/away-medium.jpg 800w, /Assets/away-small.jpg 480w"
+           sizes="(max-width:880px) 100vw, 33vw"
+           width="1200" height="250"
+           alt="Jose-Maria Kimburi at work"
+           loading="eager" decoding="async">
 
-<img src="/Assets/group.jpg"
-     srcset="/Assets/group.jpg 1200w, /Assets/group-medium.jpg 800w, /Assets/group-small.jpg 480w"
-     sizes="(max-width:880px) 100vw, 33vw"
-     width="1200" height="250"
-     alt="Group shot with collaborators"
-     loading="eager" decoding="async">
+      <img src="/Assets/group.jpg"
+           srcset="/Assets/group.jpg 1200w, /Assets/group-medium.jpg 800w, /Assets/group-small.jpg 480w"
+           sizes="(max-width:880px) 100vw, 33vw"
+           width="1200" height="250"
+           alt="Group shot with collaborators"
+           loading="eager" decoding="async">
 
-<img src="/Assets/direct.jpg"
-     srcset="/Assets/direct.jpg 1200w, /Assets/direct-medium.jpg 800w, /Assets/direct-small.jpg 480w"
-     sizes="(max-width:880px) 100vw, 33vw"
-     width="1200" height="250"
-     alt="Directing on location"
-     loading="eager" decoding="async">
+      <img src="/Assets/direct.jpg"
+           srcset="/Assets/direct.jpg 1200w, /Assets/direct-medium.jpg 800w, /Assets/direct-small.jpg 480w"
+           sizes="(max-width:880px) 100vw, 33vw"
+           width="1200" height="250"
+           alt="Directing on location"
+           loading="eager" decoding="async">
     </section>
 
     <!-- Hero name & signature -->
@@ -166,7 +123,7 @@
       <p itemprop="jobTitle">Author & Filmmaker</p>
     </section>
 
-    <!-- Visually hidden aliases for accessibility and natural discovery -->
+    <!-- Aliases for discovery -->
     <div class="sr-only" aria-hidden="false">
       Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi J, Kimburi, J Kimburi, J-MK, 18 Reflections, 18 Reflections: Divides, Epidemics and the Generation Caught in Between, BioVerse TV, JKimburi
     </div>
@@ -187,7 +144,6 @@
     <section class="biography" aria-label="Biography">
       <div class="biographyText">
         <h2 itemprop="alternateName">J.K</h2>
-        <br>
         <p itemprop="description">Jose-Maria Kimburi is an 18-year-old author & filmmaker based in the UK. His work explores both human and physical change through geography, with creative projects centred around people-place relationships.</p>
         <p><i>18 Reflections: Divides, Epidemics and the Generation Caught in Between is his debut book, written to articulate the complex realities his generation faces as they grow up amid social, environmental, economic and health challenges.</i></p>
         <p><i>BioVerse TV: Unplugging from Social Media is his debut documentary, encouraging people to step back from the constant busyness of digital life and reconnect with the natural world. The film highlights the mental health benefits of spending time in nature while showcasing its beauty and biodiversity. By weaving together personal experiences, expert interviews and practical advice, BioVerse TV presents a refreshing and accessible way to rethink our relationship with both technology and the environment.</i></p>
@@ -213,59 +169,47 @@
         <p>For all general enquiries, email <a href="mailto:info@j-mk.com">info@j-mk.com</a></p>
       </div>
     </footer>
-
   </main>
 
-  <!-- JSON-LD structured data: Person, WebSite, BreadcrumbList and SearchAction -->
+  <!-- JSON-LD structured data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@graph": [
       {
         "@type": "Person",
-        "@id": "https://www.j-mk.com/#person",
+        "@id": "https://j-mk.com/#person",
         "name": "Jose-Maria Kimburi",
         "alternateName": ["Jose-Maria","Jose Kimburi","Kimburi J","Kimburi","J Kimburi","J-MK","JKimburi","J-Mk"],
         "jobTitle": "Author & Filmmaker",
-        "url": "https://www.j-mk.com/",
-        "image": "https://www.j-mk.com/Assets/away.jpg",
+        "url": "https://j-mk.com/",
+        "image": "https://j-mk.com/Assets/away.jpg",
         "sameAs": [
           "https://www.instagram.com/JKimburi"
-          /* add other social profiles here */
         ],
         "description": "Jose-Maria Kimburi is an author and filmmaker whose work explores human and physical change through geography. Author of 18 Reflections and executive producer & director of BioVerse TV."
       },
       {
         "@type": "WebSite",
-        "@id": "https://www.j-mk.com/#website",
-        "url": "https://www.j-mk.com/",
+        "@id": "https://j-mk.com/#website",
+        "url": "https://j-mk.com/",
         "name": "Jose-Maria Kimburi",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://www.j-mk.com/?s={search_term_string}",
+          "target": "https://j-mk.com/?s={search_term_string}",
           "query-input": "required name=search_term_string"
         }
       },
       {
         "@type": "BreadcrumbList",
         "itemListElement": [
-          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.j-mk.com/" },
-          { "@type": "ListItem", "position": 2, "name": "Books", "item": "https://www.j-mk.com/books/" },
-          { "@type": "ListItem", "position": 3, "name": "Media", "item": "https://www.j-mk.com/media/" }
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://j-mk.com/" },
+          { "@type": "ListItem", "position": 2, "name": "Books", "item": "https://j-mk.com/books.html" },
+          { "@type": "ListItem", "position": 3, "name": "Media", "item": "https://j-mk.com/media.html" }
         ]
       }
     ]
   }
   </script>
-
 </body>
 </html>
-
-
-
-
-
-
-
-
-
