--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
       <div class="container row">
         <nav aria-label="Primary navigation">
           <ul class="navList">
-            <li><a class="navLink" href="books.html">Books</a></li>
-            <li><a class="navLink" href="media.html">Media</a></li>
+            <li><a class="navLink" href="books">Books</a></li>
+            <li><a class="navLink" href="media">Media</a></li>
           </ul>
         </nav>
       </div>
@@ -286,12 +286,12 @@
       </div>
 
       <section class="homeBubbles" aria-label="Quick links">
-        <div class="bubbleCard" onclick="location.href='books.html'" role="link" tabindex="0" aria-label="Books — Explore books by Kimburi">
+        <div class="bubbleCard" onclick="location.href='books'" role="link" tabindex="0" aria-label="Books — Explore books by Kimburi">
           <h3>Books</h3>
           <p>Explore the books Kimburi has authored as well his upcoming publications.</p>
         </div>
 
-        <div class="bubbleCard" onclick="location.href='media.html'" role="link" tabindex="0" aria-label="Media — Explore media by Kimburi">
+        <div class="bubbleCard" onclick="location.href='media'" role="link" tabindex="0" aria-label="Media — Explore media by Kimburi">
           <h3>Media</h3>
           <p>Explore the documentaries, series and docuseries Kimburi has produced and directed as well as his upcoming projects.</p>
         </div>
@@ -383,3 +383,4 @@
     </script>
   </body>
 </html>
+
