--- a/books.html
+++ b/books.html
@@ -14,13 +14,13 @@
     <meta name="keywords" content="Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi, J Kimburi, J-MK, 18 Reflections, 18 Reflections: Divides, Epidemics and the Generation Caught in Between, Jose-Maria author, J-MK books">
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://j-mk.com/books.html">
+    <link rel="canonical" href="https://j-mk.com/books">
 
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="book">
     <meta property="og:title" content="18 Reflections | Jose-Maria Kimburi">
     <meta property="og:description" content="18 Reflections by Jose-Maria Kimburi.">
-    <meta property="og:url" content="https://j-mk.com/books.html">
+    <meta property="og:url" content="https://j-mk.com/books">
     <meta property="og:image" content="https://j-mk.com/Assets/bookcover.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
@@ -229,8 +229,8 @@
       <div class="container row">
         <nav aria-label="Primary navigation">
           <ul class="navList">
-            <li><a class="navLink" href="index.html">Home</a></li>
-            <li><a class="navLink" href="media.html">Media</a></li>
+            <li><a class="navLink" href="index">Home</a></li>
+            <li><a class="navLink" href="media">Media</a></li>
           </ul>
         </nav>
       </div>
@@ -297,7 +297,7 @@
         "@graph": [
           {
             "@type": "Book",
-            "@id": "https://j-mk.com/books.html#book",
+            "@id": "https://j-mk.com/books#book",
             "name": "18 Reflections",
             "alternateName": "18 Reflections: Divides, Epidemics and the Generation Caught in Between",
             "author": {
@@ -307,7 +307,7 @@
             },
             "image": "https://j-mk.com/Assets/bookcover.jpg",
             "description": "Reflections on identity, mental health and environment targeted at young adults.",
-            "url": "https://j-mk.com/books.html",
+            "url": "https://j-mk.com/books",
             "inLanguage": "en-GB",
             "datePublished": "2026-06-26",
             "isbn": "9798283299419",
@@ -326,3 +326,4 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
