--- a/media.html
+++ b/media.html
@@ -230,8 +230,8 @@
       <div class="container row">
         <nav aria-label="Primary navigation">
           <ul class="navList">
-            <li><a class="navLink" href="index.html">Home</a></li>
-            <li><a class="navLink" href="books.html">Books</a></li>
+            <li><a class="navLink" href="index">Home</a></li>
+            <li><a class="navLink" href="books">Books</a></li>
           </ul>
         </nav>
       </div>
@@ -474,3 +474,4 @@
     </script>
   </body>
 </html>
+
