--- a/media.html
+++ b/media.html
@@ -37,6 +37,32 @@
     <link rel="preload" href="https://img.youtube.com/vi/ul8YApOvM2c/hqdefault.jpg" as="image">
     <link rel="preload" href="https://img.youtube.com/vi/ejZUEKCKmsM/hqdefault.jpg" as="image">
 
+    <!-- Paste this in <head> on index.html, books.html, media.html (after meta tags) -->
+<script>
+(function () {
+  const p = location.pathname;
+
+  // 1) If URL ends with .html -> do a client redirect to the clean path.
+  if (p.endsWith('.html')) {
+    // /index.html -> /
+    // /books.html -> /books
+    let clean = p.replace(/\/index\.html$/, '/').replace(/\.html$/, '');
+    if (!clean) clean = '/';
+    // remove trailing slash for non-root (so /books/ -> /books)
+    if (clean !== '/' && clean.endsWith('/')) clean = clean.replace(/\/+$/, '');
+    location.replace(location.origin + clean + location.search + location.hash);
+    return; // stop further script (we're redirecting)
+  }
+
+  // 2) If server provided a trailing slash (e.g. /books/), remove it from the address bar
+  // but only for non-root paths (don't change "/" itself)
+  if (p.length > 1 && p.endsWith('/')) {
+    const noSlash = p.replace(/\/+$/, '');
+    history.replaceState({}, '', noSlash + location.search + location.hash);
+  }
+})();
+</script>
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -474,4 +500,5 @@
     </script>
   </body>
 </html>
+
 
