--- a/books.html
+++ b/books.html
@@ -255,8 +255,8 @@
       <div class="container row">
         <nav aria-label="Primary navigation">
           <ul class="navList">
-            <li><a class="navLink" href="index">Home</a></li>
-            <li><a class="navLink" href="media">Media</a></li>
+            <li><a class="navLink" href="/">Home</a></li>
+            <li><a class="navLink" href="/media">Media</a></li>
           </ul>
         </nav>
       </div>
@@ -352,5 +352,6 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
