--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
       <div class="container row">
         <nav aria-label="Primary navigation">
           <ul class="navList">
-            <li><a class="navLink" href="books">Books</a></li>
-            <li><a class="navLink" href="media">Media</a></li>
+            <li><a class="navLink" href="/books">Books</a></li>
+            <li><a class="navLink" href="/media">Media</a></li>
           </ul>
         </nav>
       </div>
@@ -312,12 +312,12 @@
       </div>
 
       <section class="homeBubbles" aria-label="Quick links">
-        <div class="bubbleCard" onclick="location.href='books'" role="link" tabindex="0" aria-label="Books — Explore books by Kimburi">
+        <div class="bubbleCard" onclick="location.href='/books'" role="link" tabindex="0" aria-label="Books — Explore books by Kimburi">
           <h3>Books</h3>
           <p>Explore the books Kimburi has authored as well his upcoming publications.</p>
         </div>
 
-        <div class="bubbleCard" onclick="location.href='media'" role="link" tabindex="0" aria-label="Media — Explore media by Kimburi">
+        <div class="bubbleCard" onclick="location.href='/media'" role="link" tabindex="0" aria-label="Media — Explore media by Kimburi">
           <h3>Media</h3>
           <p>Explore the documentaries, series and docuseries Kimburi has produced and directed as well as his upcoming projects.</p>
         </div>
@@ -409,5 +409,6 @@
     </script>
   </body>
 </html>
+
 
 
