--- a/media.html
+++ b/media.html
@@ -256,8 +256,8 @@
       <div class="container row">
         <nav aria-label="Primary navigation">
           <ul class="navList">
-            <li><a class="navLink" href="index">Home</a></li>
-            <li><a class="navLink" href="books">Books</a></li>
+            <li><a class="navLink" href="/">Home</a></li>
+            <li><a class="navLink" href="/books">Books</a></li>
           </ul>
         </nav>
       </div>
@@ -500,5 +500,6 @@
     </script>
   </body>
 </html>
+
 
 
