--- a/media.html
+++ b/media.html
@@ -12,8 +12,8 @@
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi, Kimburi J, J Kimburi, J-MK, 18 Reflections, BioVerse TV, BioVerse TV Unplugging from Social Media, JKimburi, documentary, teaser">
 
-    <link rel="canonical" href="https://www.j-mk.com/media/">
-    <link rel="alternate" hreflang="en-GB" href="https://www.j-mk.com/media/">
+    <link rel="canonical" href="https://www.j-mk.com/media">
+    <link rel="alternate" hreflang="en-GB" href="https://www.j-mk.com/media">
 
     <!-- Open Graph & Twitter card for richer sharing -->
     <meta property="og:type" content="website">
@@ -500,6 +500,7 @@
     </script>
   </body>
 </html>
+
 
 
 
