--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="author" content="Jose-Maria Kimburi">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi, Kimburi J, J Kimburi, J-MK, 18 Reflections, 18 Reflections: Divides, Epidemics and the Generation Caught in Between, BioVerse TV">
-    <link rel="canonical" href="https://j-mk.com/">
-    <link rel="alternate" hreflang="en-GB" href="https://j-mk.com/">
+    <link rel="canonical" href="https://www.j-mk.com/">
+    <link rel="alternate" hreflang="en-GB" href="https://www.j-mk.com/">
 
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="website">
@@ -409,6 +409,7 @@
     </script>
   </body>
 </html>
+
 
 
 
