--- a/books.html
+++ b/books.html
@@ -14,7 +14,9 @@
     <meta name="keywords" content="Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi, J Kimburi, J-MK, 18 Reflections, 18 Reflections: Divides, Epidemics and the Generation Caught in Between, Jose-Maria author, J-MK books">
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://j-mk.com/books">
+   <link rel="canonical" href="https://www.j-mk.com/books">
+   <link rel="alternate" hreflang="en-GB" href="https://www.j-mk.com/books">
+
 
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="book">
@@ -352,6 +354,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
