--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 
     <!-- Performance hints (root-based) -->
     <link rel="preload" href="/Assets/away.jpg" as="image">
-    <link rel="preload" href="/Assets/group.jpg" as="image">
     <link rel="preload" href="/Assets/direct.jpg" as="image">
 
     <!-- Fonts -->
@@ -296,9 +295,8 @@
     <main class="container" itemscope itemtype="https://schema.org/Person" aria-label="Main content for Jose-Maria Kimburi">
       <section class="heroGallery" aria-label="Gallery of images">
         <!-- using root-based src only (no srcset) so desktop won't attempt missing variants -->
-        <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi at work" loading="eager" decoding="async">
-        <img src="/Assets/group.jpg" width="1200" height="250" alt="Group shot with collaborators" loading="eager" decoding="async">
-        <img src="/Assets/direct.jpg" width="1200" height="250" alt="Directing on location" loading="eager" decoding="async">
+        <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi head on" loading="eager" decoding="async">
+        <img src="/Assets/direct.jpg" width="1200" height="250" alt="Jose-Maria Kimburi side view" loading="eager" decoding="async">
       </section>
 
       <section class="heroName">
@@ -409,6 +407,7 @@
     </script>
   </body>
 </html>
+
 
 
 
