--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Jose-Maria Kimburi">
     <meta property="og:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
-    <meta property="og:url" content="https://j-mk.com/">
+    <meta property="og:url" content="https://www.j-mk.com/">
     <meta property="og:image" content="https://j-mk.com/Assets/away.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
@@ -407,6 +407,7 @@
     </script>
   </body>
 </html>
+
 
 
 
