--- a/books.html
+++ b/books.html
@@ -22,7 +22,7 @@
     <meta property="og:type" content="book">
     <meta property="og:title" content="18 Reflections | Jose-Maria Kimburi">
     <meta property="og:description" content="18 Reflections by Jose-Maria Kimburi.">
-    <meta property="og:url" content="https://j-mk.com/books">
+    <meta property="og:url" content="https://www.j-mk.com/books">
     <meta property="og:image" content="https://j-mk.com/Assets/bookcover.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
@@ -325,7 +325,7 @@
         "@graph": [
           {
             "@type": "Book",
-            "@id": "https://j-mk.com/books#book",
+            "@id": "https://www.j-mk.com/books#book",
             "name": "18 Reflections",
             "alternateName": "18 Reflections: Divides, Epidemics and the Generation Caught in Between",
             "author": {
@@ -335,7 +335,7 @@
             },
             "image": "https://j-mk.com/Assets/bookcover.jpg",
             "description": "Reflections on identity, mental health and environment targeted at young adults.",
-            "url": "https://j-mk.com/books",
+            "url": "https://www.j-mk.com/books",
             "inLanguage": "en-GB",
             "datePublished": "2026-06-26",
             "isbn": "9798283299419",
@@ -354,6 +354,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
