--- a/books.html
+++ b/books.html
@@ -299,7 +299,7 @@
             <div class="actions" role="group" aria-label="Purchase links for 18 Reflections">
               <a href="https://www.amazon.co.uk/stores/Jose-Maria-Kimburi/author/B0FLM5L52Y?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Amazon">Amazon</a>
               <a href="https://books.apple.com/us/book/18-reflections-divides-epidemics-and-the/id6752995264" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Apple Books">Apple</a>
-              <a href="https://play.google.com/store/books" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Google Play">Google Play</a>
+              <a href="https://play.google.com/store/books/details?id=kMmKEQAAQBAJ&pli=1" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Google Play">Google Play</a>
             </div>
 
             <div class="sr-only" aria-hidden="false">
@@ -354,6 +354,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
