--- a/media.html
+++ b/media.html
@@ -403,6 +403,9 @@
                 <meta itemprop="description" content="Teaser 2 for BioVerse TV: Unplugging from Social Media featuring Lucy Lapwing.">
               </div>
             </article>
+         </div>
+        </div>
+
 
         <aside class="mediaCard" itemscope itemtype="https://schema.org/CreativeWork">
           <h3 style="margin-bottom:.5rem">Additional resources</h3>
@@ -510,6 +513,7 @@
 
   </body>
 </html>
+
 
 
 
