--- a/media.html
+++ b/media.html
@@ -20,19 +20,19 @@
     <meta property="og:title" content="Media | Jose-Maria Kimburi">
     <meta property="og:description" content="Media and film work by Jose-Maria Kimburi, including BioVerse TV: Unplugging from Social Media.">
     <meta property="og:url" content="https://www.j-mk.com/media">
-    <meta property="og:image" content="https://www.j-mk.com/Assets/direct.jpg">
+    <meta property="og:image" content="https://www.j-mk.com/Assets/direct2.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Media | Jose-Maria Kimburi">
     <meta name="twitter:description" content="Media and film work by Jose-Maria Kimburi, including BioVerse TV: Unplugging from Social Media.">
-    <meta name="twitter:image" content="https://www.j-mk.com/Assets/direct.jpg">
+    <meta name="twitter:image" content="https://www.j-mk.com/Assets/direct2.jpg">
 
     <!-- Favicon -->
     <link rel="icon" href="Assets/favicon.png" type="image/png">
 
     <!-- Performance hints -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="Assets/direct.jpg" as="image">
+    <link rel="preload" href="Assets/direct2.jpg" as="image">
     <link rel="preload" href="https://img.youtube.com/vi/FwLV0fk1lv0/hqdefault.jpg" as="image">
     <link rel="preload" href="https://img.youtube.com/vi/XykgaUQwXy4/hqdefault.jpg" as="image">
     <link rel="preload" href="https://img.youtube.com/vi/ul8YApOvM2c/hqdefault.jpg" as="image">
@@ -419,7 +419,7 @@
       "alternateName": ["Jose-Maria","Jose Kimburi","Kimburi J","Kimburi","J Kimburi","J-MK","JKimburi","J-Mk"],
       "jobTitle": "Author & Filmmaker",
       "url": "https://www.j-mk.com/",
-      "image": "https://www.j-mk.com/Assets/direct.jpg",
+      "image": "https://www.j-mk.com/Assets/direct2.jpg",
       "sameAs": ["https://www.instagram.com/JKimburi"],
       "description": "Jose-Maria Kimburi is an author and filmmaker whose work explores human and physical change through geography. Director of BioVerse TV: Unplugging from Social Media."
     },
@@ -476,6 +476,7 @@
 </script>
   </body>
 </html>
+
 
 
 
