--- a/media.html
+++ b/media.html
@@ -274,7 +274,7 @@
           <div class="mediaMeta">
             <div class="metaLeft">
               <strong itemprop="name">BioVerse TV: Unplugging from Social Media</strong>
-              <p class="muted">Take a look at my debut documentary.</p>
+              <p class="muted">Take a look at my directorial debut documentary.</p>
             </div>
           </div>
 
@@ -476,6 +476,7 @@
 </script>
   </body>
 </html>
+
 
 
 
