--- a/media.html
+++ b/media.html
@@ -296,7 +296,7 @@
     <h3 id="video1-title">BioVerse TV: Unplugging from Social Media | Official Documentary Trailer | 11/10/25</h3>
     <p class="muted">
       This documentary explores the mental health benefits of stepping away from the digital world and
-      rediscovering the natural world around us.
+      rediscovering the natural world around us.  With stunning visuals and honest stories and reflections, the documentary reveals the power of nature to heal and inspire.
     </p>
 
     <div class="actions">
@@ -474,6 +474,7 @@
 </script>
   </body>
 </html>
+
 
 
 
