--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
           <p>
             <i>
-              BioVerse TV: Unplugging from Social Media is his debut documentary, encouraging people to step back from
+              BioVerse TV: Unplugging from Social Media is his directorial debut documentary, encouraging people to step back from
               the constant busyness of digital life and reconnect with the natural world. The film highlights the
               mental health benefits of spending time in nature while showcasing its beauty and biodiversity. By weaving
               together personal experiences, expert interviews and practical advice, BioVerse TV presents a refreshing
@@ -407,6 +407,7 @@
     </script>
   </body>
 </html>
+
 
 
 
