--- a/index.html
+++ b/index.html
@@ -350,8 +350,9 @@
 
           <section class="updates" aria-label="Updates">
             <div class="updatesText">
-              <p>Both his debut book and debut documentary will be released in the coming months.</p>
-
+              <p>BioVerse TV: Unplugging from Social Media Trailer is out now. The full documentary will be released on 25.102.2025.</p> <br> 
+              <p>18 Reflections: Divides, Epidemics and the Generation Caught in Between will be released in November. Date to be released shortly. </p> 
+                                                                                                                                          
               <p>
                 Follow his Instagram
                 (<a href="https://instagram.com/JKimburi" target="_blank" rel="noopener noreferrer" aria-label="Follow JKimburi on Instagram">@JKimburi</a>)
@@ -407,6 +408,7 @@
     </script>
   </body>
 </html>
+
 
 
 
