--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
           <section class="updates" aria-label="Updates">
             <div class="updatesText">
-              <p>BioVerse TV: Unplugging from Social Media Trailer is out now. The full documentary will be released on 25.102.2025.</p> <br> 
+              <p>BioVerse TV: Unplugging from Social Media Trailer is out now. The full documentary will be released on 25.102.2025 at 18:00 BST on his YouTube Channel.</p>
               <p>18 Reflections: Divides, Epidemics and the Generation Caught in Between will be released in November. Date to be released shortly. </p> 
                                                                                                                                           
               <p>
@@ -408,6 +408,7 @@
     </script>
   </body>
 </html>
+
 
 
 
