--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <i>
               18 Reflections: Divides, Epidemics and the Generation Caught in Between is his debut book, written to
               articulate the complex realities his generation faces as they grow up amid social, environmental,
-              economic and health challenges.
+              economic and health challenges. This will be published in November. Exact date to be released shortly.
             </i>
           </p>
 
@@ -344,15 +344,13 @@
               the constant busyness of digital life and reconnect with the natural world. The film highlights the
               mental health benefits of spending time in nature while showcasing its beauty and biodiversity. By weaving
               together personal experiences, expert interviews and practical advice, BioVerse TV presents a refreshing
-              and accessible way to rethink our relationship with both technology and the environment.
+              and accessible way to rethink our relationship with both technology and the environment. The trailer is out now.
             </i>
           </p>
 
           <section class="updates" aria-label="Updates">
             <div class="updatesText">
-              <p>The BioVerse TV: Unplugging from Social Media Trailer is out now. The full documentary will be released on 25.10.2025 at 18:00 BST.</p>
-              <p>18 Reflections: Divides, Epidemics and the Generation Caught in Between will be released in November. Date to be released shortly. </p> 
-                                                                                                                                          
+              
               <p>
                 Follow his Instagram
                 (<a href="https://instagram.com/JKimburi" target="_blank" rel="noopener noreferrer" aria-label="Follow JKimburi on Instagram">@JKimburi</a>)
@@ -408,6 +406,7 @@
     </script>
   </body>
 </html>
+
 
 
 
