--- a/index.html
+++ b/index.html
@@ -150,11 +150,12 @@
       }
 
       .heroName p {
-        font-family: 'Zeyada', cursive;
+        font-family: 'Mrs Saint Delafield', cursive;
         font-size: 3rem;
         color: var(--accent);
         margin: 0;
-
+      }
+      
       .homeBubbles {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
