--- a/index.html
+++ b/index.html
@@ -149,12 +149,17 @@
         margin-bottom: .25rem;
       }
 
-      .heroName p {
-        font-family: 'Mrs Saint Delafield', cursive;
-        font-size: 3rem;
-        color: var(--accent);
-        margin: 0;
+     .heroName p {
+       font-family: 'Zeyada', cursive;
+       font-size: 2.6rem;
+       line-height: 1;
+       display: inline-block;   /* keeps the text sizing/layout stable */
+       color: var(--accent);
+       margin: 0;
+       padding: 0;
+       letter-spacing: 0.2px;
       }
+
       
       .homeBubbles {
         display: grid;
@@ -406,6 +411,7 @@
     </script>
   </body>
 </html>
+
 
 
 
