--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       <section class="heroName">
         <h1 itemprop="name">Jose-Maria Kimburi</h1>
         <br>
-        <p itemprop="jobTitle">Author, Film Producer & Director</p>
+        <p itemprop="jobTitle">Author & Filmmaker</p>
       </section>
 
       <div class="sr-only" aria-hidden="false">
@@ -413,6 +413,7 @@
     </script>
   </body>
 </html>
+
 
 
 
